fixing to prevent getting cut off

--- a/public/style.css
+++ b/public/style.css
@@ -88,6 +88,7 @@ main {
   flex: 1;
   background-color: black;
   border:0;
+  font-family: Arial, sans-serif;
   /* font-family: monospace; */
 }
 
